--- a/app/src/main/res/layout/splash_layout.xml
+++ b/app/src/main/res/layout/splash_layout.xml
@@ -12,9 +12,9 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="238.5dp"
-            android:layout_height="295.5dp"
-            android:layout_marginTop="111dp"
+            android:layout_width="92dp"
+            android:layout_height="98dp"
+            android:layout_marginTop="272dp"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -22,7 +22,7 @@
                 android:id="@+id/splash_logo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/sprash_logo" />
+                android:src="@drawable/logo" />
 
         </LinearLayout>
 
