--- a/app/src/main/res/layout/login_layout_pre.xml
+++ b/app/src/main/res/layout/login_layout_pre.xml
@@ -8,12 +8,12 @@
     android:orientation="vertical">
 
 
-    <LinearLayout
-        android:id="@+id/linearlayout01"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="173dp"
-        android:gravity="center">
+<!--    <LinearLayout-->
+<!--        android:id="@+id/linearlayout01"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="173dp"-->
+<!--        android:gravity="center">-->
 
         <!--<ImageView-->
             <!--android:layout_width="240dp"-->
@@ -24,50 +24,50 @@
             android:id="@+id/logo_img"
             android:layout_width="142dp"
             android:layout_height="42dp"
-
-
+            android:layout_marginTop="173dp"
+            android:layout_gravity="center_horizontal"
             android:src="@drawable/group" />
 
-    </LinearLayout>
+<!--    </LinearLayout>-->
 
-    <LinearLayout
-        android:id="@+id/linearlayout02"
-        android:layout_width="match_parent"
-        android:layout_height="22dp"
-        android:layout_marginTop="30dp"
-        android:gravity="center"
-        android:orientation="vertical">
+<!--    <LinearLayout-->
+<!--        android:id="@+id/linearlayout02"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="22dp"-->
+<!--        android:layout_marginTop="30dp"-->
+<!--        android:gravity="center"-->
+<!--        android:orientation="vertical">-->
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="18dp"
             android:layout_gravity="center"
             android:gravity="center|center_horizontal|center_vertical"
             android:textColor="#3e3e3e"
             android:textSize="17sp"
             android:textStyle="bold"
+            android:layout_marginTop="36dp"
             tools:text="신차로, 처음이세요?" />
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/linearlayout03"
-        android:layout_width="match_parent"
-        android:layout_height="18dp"
-        android:layout_marginTop="16dp"
-        android:gravity="center"
-        android:orientation="vertical">
+<!--    </LinearLayout>-->
+<!--    <LinearLayout-->
+<!--        android:id="@+id/linearlayout03"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="18dp"-->
+<!--        android:layout_marginTop="16dp"-->
+<!--        android:gravity="center"-->
+<!--        android:orientation="vertical">-->
         <TextView
             android:id="@+id/login_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:layout_marginEnd="40dp"
-            android:gravity="center_horizontal|center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="17dp"
+            android:layout_marginTop="16dp"
+            android:layout_gravity="center_horizontal"
             android:text="@string/login_text"
             android:textColor="#3e3e3e"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
-    </LinearLayout>
+<!--    </LinearLayout>-->
 
 
     <LinearLayout
