--- a/app/src/main/res/layout/login_layout_pre.xml
+++ b/app/src/main/res/layout/login_layout_pre.xml
@@ -33,7 +33,7 @@
     <LinearLayout
         android:id="@+id/linearlayout02"
         android:layout_width="match_parent"
-        android:layout_height="22dp"
+        android:layout_height="24dp"
         android:layout_marginTop="30dp"
         android:gravity="center"
         android:orientation="vertical">
@@ -46,12 +46,12 @@
             android:textColor="#3e3e3e"
             android:textSize="17sp"
             android:textStyle="bold"
-            tools:text="신차로, 처음이세요?" />
+            android:text="@string/login_text1" />
     </LinearLayout>
     <LinearLayout
         android:id="@+id/linearlayout03"
         android:layout_width="match_parent"
-        android:layout_height="18dp"
+        android:layout_height="20dp"
         android:layout_marginTop="16dp"
         android:gravity="center"
         android:orientation="vertical">
@@ -62,7 +62,7 @@
             android:layout_marginStart="40dp"
             android:layout_marginEnd="40dp"
             android:gravity="center_horizontal|center_vertical"
-            android:text="@string/login_text"
+            android:text="@string/login_text2"
             android:textColor="#3e3e3e"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
