--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -6,7 +6,7 @@
     android:background="@color/customColorPrimary1"
     android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -39,7 +39,7 @@
             android:textColor="#3e3e3e"
             android:textSize="16sp" />
 -->
-    </android.support.v7.widget.Toolbar>
+    </androidx.appcompat.widget.Toolbar>
 <!--
     <LinearLayout
         android:layout_width="match_parent"
