- 웹뷰 커메라/갤러리 선택창 추가 - 회원가입 웹뷰 백키 조정

--- a/app/src/main/res/xml/provider_paths.xml
+++ b/app/src/main/res/xml/provider_paths.xml
@@ -20,4 +20,5 @@
     <!--<external-path name="cache" path="." />-->
     <external-path name="external_files" path="." />
     <!--<files-path path="." name="cache" />-->
+    <root-path name="root" path="."/>
 </paths>
