--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/customColorPrimary1"
     android:orientation="vertical">
 
@@ -28,7 +28,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/filled" />
-<!--
+        <!--
         <TextView
             android:id="@+id/title_activity"
             android:layout_width="match_parent"
@@ -40,7 +40,7 @@
             android:textSize="16sp" />
 -->
     </androidx.appcompat.widget.Toolbar>
-<!--
+    <!--
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="125dp"
@@ -52,11 +52,11 @@
         android:gravity="center"
         android:orientation="vertical">
 -->
-        <!--<ImageView-->
-            <!--android:layout_width="240dp"-->
-            <!--android:layout_height="90dp"-->
-            <!--android:src="@drawable/login_title" />-->
-<!--
+    <!--<ImageView-->
+    <!--android:layout_width="240dp"-->
+    <!--android:layout_height="90dp"-->
+    <!--android:src="@drawable/login_title" />-->
+    <!--
         <ImageView
             android:id="@+id/logo_img"
             android:layout_width="240dp"
@@ -118,7 +118,10 @@
             android:background="@null"
             android:ems="10"
             android:hint="@string/hint_phone_title"
-            android:inputType="textPassword"
+            android:inputType="number"
+            android:digits="0123456789"
+            android:maxLength="20"
+            android:nextFocusDown="@+id/user_pwd_et"
             android:textColor="#3E3E3E"
             android:textSize="14sp" />
     </LinearLayout>
@@ -180,7 +183,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layout_password2" />
-<!--
+    <!--
     <RelativeLayout
         android:layout_width="241dp"
         android:layout_height="wrap_content"
