--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,4 +18,14 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <!-- main menu button style -->
+    <style name="main_menu_button_style">
+        <item name="android:layout_width">148dp</item>
+        <item name="android:layout_height">96dp</item>
+        <item name="android:paddingTop">20dp</item>
+        <item name="android:textSize">13.5sp</item>
+        <item name="android:textColor">#3e3e3e</item>
+        <item name="android:lineSpacingExtra">12.5sp</item>
+        <item name="android:background">@drawable/layout_background</item>
+    </style>
 </resources>
