TextView 글자 안보이는 문제 수정

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,8 +16,6 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/default_button_7dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -42,6 +40,7 @@
             android:lineSpacingExtra="11sp"
             android:textColor="#ffffff"
             android:textSize="15sp"
+            android:text="@string/customer_name_str"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="@string/customer_name_str" />
@@ -55,6 +54,7 @@
             android:lineSpacingExtra="7sp"
             android:textColor="#ffffff"
             android:textSize="19sp"
+            android:text="@string/customer_point_str"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             tools:text="@string/customer_point_str" />
@@ -160,6 +160,7 @@
             android:lineSpacingExtra="7sp"
             android:textColor="#3e3e3e"
             android:textSize="15sp"
+            android:text="@string/car_register_banner_title"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="@string/car_register_banner_title" />
@@ -173,6 +174,7 @@
             android:textSize="13.5sp"
             android:textColor="#3e3e3e"
             android:lineSpacingExtra="5.5sp"
+            android:text="@string/car_register_banner_description"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/registerTitle"
             tools:text="@string/car_register_banner_description"
@@ -208,13 +210,13 @@
             android:layout_marginBottom="15dp"
             android:textColor="#ff4d4d"
             android:textSize="13sp"
+            android:text="@string/car_register"
             android:background="@drawable/white_button_7dp"
             android:drawableEnd="@drawable/chevron_left_24_px"
             android:paddingStart="12dp"
             android:paddingEnd="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:text="@string/car_register" />
+            app:layout_constraintStart_toStartOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
