ActionBar include 방식으로 변경 추천인 시스템 작업

--- a/app/src/main/res/layout/activity_point_history.xml
+++ b/app/src/main/res/layout/activity_point_history.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/customColorPrimary1"
-    tools:context=".TemplateActivity">
+    tools:context=".PointHistoryActivity">
 
     <!-- ActionBar 영역 -->
     <include layout="@layout/actionbar_info_layout"
