--- a/app/src/main/res/layout/activity_branch_info.xml
+++ b/app/src/main/res/layout/activity_branch_info.xml
@@ -20,12 +20,12 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/btnBack"
+            android:id="@+id/btnPrev"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
-            android:contentDescription="@string/actionbar_back_description"
+            android:contentDescription="@string/actionbar_prev_icon_description"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/filled" />
