--- a/app/src/main/res/menu/bottom_navi.xml
+++ b/app/src/main/res/menu/bottom_navi.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/bottom_home"
         android:enabled="true"
-        android:icon="@drawable/group_6"
+        android:icon="@drawable/home"
         android:title="홈"
         app:showAsAction="always"/>
 
